--- a/index.html
+++ b/index.html
@@ -23,5 +23,9 @@
     <div class="container">
         <image src="images/HazelLogoExtDark.png" alt="Hazel" height="100">
     </div>
+        
+    <div>
+        Hazel App 2022.
+        </div>
 </body>
 </html>
